--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
           <button id="restart-btn-2">Try Again</button>
         </div>
       </div>
+      <div class="game_won_container">
+        <div class="game_won_wrapper">
+          <p>Congratulations! You won! 🎉</p>
+          <div>
+            <span>Your score: <span id="won-score">0</span></span>
+          </div>
+          <button id="restart-btn-3">Play Again</button>
+        </div>
+      </div>
     </div>
     <script type="module" src="./scripts/script.js"></script>
   </body>
