feat: improve docker workflow by implementing good practices

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
       <section class="game-grid">
         <div class="grid-wrapper">
-          <div class="grid-container" id="grid-container">
+          <div class="grid-container">
             <!-- The grid will be filled by JavaScript -->
           </div>
         </div>
       </section>
+
+      <!-- Displays when user loses -->
       <div class="game_over_container">
         <div class="game_over_wrapper">
           <p>Game over 😔</p>
@@ -34,6 +36,8 @@
           <button id="restart-btn-2">Try Again</button>
         </div>
       </div>
+
+      <!-- Modal that displays when user wins -->
       <div class="game_won_container">
         <div class="game_won_wrapper">
           <p>Congratulations! You won! 🎉</p>
